packages/typ/tests/fixtures/diagnostics/0862_gadt_constructor_payload_bool_mismatch_01.ml.infer.expected
File "0862_gadt_constructor_payload_bool_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0862_gadt_constructor_payload_bool_mismatch_01 is not a valid module name.

File "0862_gadt_constructor_payload_bool_mismatch_01.ml", line 5, characters 38-39:
5 | let _ : bool expr_alpha = EBool_alpha 0
                                          ^
Error: The constant 0 has type int but an expression was expected of type
         bool
